--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,46 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Kantinens menu for uge 45</h1>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Dag</th>
+                <th>Varm Ret</th>
+                <th>Kold Ret</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Man</td>
+                <td>Kylling &amp; pasta</td>
+                <td>Smørrebrød</td>
+            </tr>
+            <tr>
+                <td>Tirs</td>
+                <td>Græskarsuppe</td>
+                <td>Pastasalat</td>
+            </tr>
+            <tr>
+                <td>Ons</td>
+                <td>Lasagne</td>
+                <td>Salat</td>
+            </tr>
+            <tr>
+                <td>Tors</td>
+                <td>Fiskefilet</td>
+                <td>Tunsalat</td>
+            </tr>
+            <tr>
+                <td>Fre</td>
+                <td>Pizza</td>
+                <td>Sandwich</td>
+            </tr>
+        </tbody>
+    </table>
+
+
+<p>Velbekomme!</p>
+ 
 </div>
